# z2p

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
tests/: health_check.rs
